k8s-gateway.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: test
spec:
  rules:
    - host: qcbm1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: test
spec:
  ports:
    - port: 9999
      name: gateway
  selector:
    project: ms
    app: gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      project: ms
      app: gateway
  template:
    metadata:
      labels:
        project: ms
        app: gateway
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      containers:
        - name: gateway
          image: 192.168.126.146:80/repo/gateway:v1.0.0
          imagePullPolicy: Always
          ports:
            - protocol: TCP
              containerPort: 9999
          resources:
            requests:
              cpu: 0.5
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
